# codex_news

./: .gitignore
codex-rs/: Cargo.toml
codex-webui-rs/: Cargo.toml  README.md
codex-webui-rs/public/: app.js  index.html  styles.css
codex-webui-rs/src/: main.rs
